<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.AppTheme.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/person"
            style="@style/Widget.AppTheme.TextView.CardTitle.BottomPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            style="@style/Widget.AppTheme.CardLateralPadding"
            android:paddingBottom="@dimen/card_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_forename"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_forename"
                        android:hint="@string/forename"
                        style="@style/Widget.AppTheme.EditText.SingleLine.Input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_surname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_surname"
                        android:hint="@string/surname"
                        style="@style/Widget.AppTheme.EditText.SingleLine.Input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_normal">

                <RadioButton
                    android:id="@+id/rBtn_male"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rBtn_female"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
