<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.marriage.EditMarriageActivity">

    <include layout="@layout/app_bar_layout" />

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                style="@style/Widget.AppTheme.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/people"
                        style="@style/Widget.AppTheme.TextView.CardTitle.BottomPadding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        style="@style/Widget.AppTheme.CardLateralPadding"
                        android:paddingBottom="@dimen/card_padding"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false">

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/textInputLayout_person1"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/editText_person1"
                                    android:hint="@string/person_1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </android.support.design.widget.TextInputLayout>

                            <TextView
                                android:text="@string/married_to"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/textInputLayout_person2"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/editText_person2"
                                    android:hint="@string/person_2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/Widget.AppTheme.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/details"
                        style="@style/Widget.AppTheme.TextView.CardTitle.BottomPadding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        style="@style/Widget.AppTheme.CardLateralPadding"
                        android:paddingBottom="@dimen/card_padding"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/editText_startDate"
                                    android:hint="@string/start_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/editText_placeOfMarriage"
                                    android:hint="@string/place_of_marriage"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <CheckBox
                            android:id="@+id/checkbox_married"
                            android:text="@string/currently_married"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_normal"/>

                        <LinearLayout
                            android:id="@+id/group_endInfo"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_normal"
                            android:baselineAligned="false">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/editText_endDate"
                                    android:hint="@string/end_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </android.support.design.widget.TextInputLayout>

                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
