<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.person.ViewPersonActivity">

    <include layout="@layout/app_bar_layout" />

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                style="@style/Widget.AppTheme.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:id="@+id/container_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- Item will be added programmatically -->
                        <include layout="@layout/item_list_person"
                            tools:visibility="visible"
                            android:visibility="gone" />
                    </FrameLayout>

                    <TextView
                        android:text="@string/married_to"
                        android:textColor="@color/text_black"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <FrameLayout
                        android:id="@+id/container_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- Item will be added programmatically -->
                        <include layout="@layout/item_list_person"
                            tools:visibility="visible"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/Widget.AppTheme.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:text="@string/married"
                        style="@style/Widget.AppTheme.TextView.FloatingLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/text_married"
                        tools:text="19 June 1957"
                        style="@style/Widget.AppTheme.TextView.InputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/group_divorceInfo"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:text="@string/divorced"
                            style="@style/Widget.AppTheme.TextView.FloatingLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/text_divorced"
                            tools:text="30 January 2005"
                            style="@style/Widget.AppTheme.TextView.InputText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
